--- a/examples/web-demo.html
+++ b/examples/web-demo.html
@@ -36,6 +36,6 @@
             import init from './js/split-chart.js'
             init()
         </script>
-
+        <!-- see split-chart.rs for details -->
     </body>
 </html>
