update example split-chart

--- a/examples/split-chart/index.html
+++ b/examples/split-chart/index.html
@@ -2,14 +2,15 @@
 <html>
 
 <head>
-    <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+    <meta content="text/html; charset=utf-8" charset="utf-8" http-equiv="Content-Type">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>split chart example</title>
+    <base data-trunk-public-url />
 </head>
 
 <body>
-    <link data-trunk rel="rust" data-wasm-opt="z" data-bin="split-chart" />
+    <link data-trunk rel="rust" href="Cargo.toml" data-wasm-opt="z" data-bin="split-chart" />
     <!-- see split-chart.rs for details -->
 </body>
 
